--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generateFile": "node --max-old-space-size=4096 parser.js",
+    "parse": "node --max-old-space-size=50 parser.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/NearHeron/otus-node/issues"
   },
-  "homepage": "https://github.com/NearHeron/otus-node#readme"
+  "homepage": "https://github.com/NearHeron/otus-node#readme",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
